--- a/src/assets/i18n/ru-RU.json
+++ b/src/assets/i18n/ru-RU.json
@@ -1,4 +1,67 @@
 {
+	"ABOUT": {
+		"TITLE": "О системе Avaya Meetings",
+		"RELEASE": "Версия:",
+		"AVAYA_TRADEMARKS": "Avaya Meetings и Equinox Conferencing — товарные знаки Avaya Inc.",
+		"OTHER_TRADEMARKS": "Java — товарный знак Sun Microsystems, Inc.; Microsoft, Windows и Internet Explorer — товарные знаки или зарегистрированные товарные знаки Microsoft Corporation на территории США и/или других стран.",
+		"TRADEMARKS_INFO": "Названия всех прочих продуктов, используемые в настоящем документе, являются товарными знаками или зарегистрированными товарными знаками соответствующих производителей.",
+		"COPYRIGHT_INFO": "Дополнительная информация об идентификации владельцев авторских прав на компоненты от третьих сторон и условий, которые применяются к данному продукту, доступна <a href=\"{{link}}\" target=\"_blank\">{{здесь}}</a>.",
+		"LICENCE": "Загружая программное обеспечение, устанавливая или используя его вы подтверждаете, что прочитали, поняли и приняли условия лицензионного соглашения на использование программного обеспечения Avaya Software License Terms (Avaya Products): ",
+		"LICENCE_I18N": "Английская, бразильская, французская (Канада), китайская, немецкая, итальянская, португальская, испанская, французская, японская и русская версии расположены на: ",
+		"USAGE_INFO": "Если у вас нет прямого доступа к Интернету, воспользуйтесь устройством с доступом к Интернету, чтобы просмотреть, загрузить и распечатать соответствующую лицензию.",
+		"COPYRIGHT": "© Avaya Inc., {{year}} г. Все права защищены.",
+		"CLOSE": "Закрыть",
+		"LINK": "ссылка"
+	},
+	"LOGIN": {
+		"SIGNING": "Выполняется вход...",
+		"LOADING": "Загрузка...",
+		"GREETING": "У вас уже есть учетная запись?",
+		"NAME": "имя пользователя",
+		"LOGIN": "вход",
+		"PASSWORD": "пароль",
+		"REMEMBER_ME": "Оставаться в системе",
+		"SIGN_IN": "Вход",
+		"LOG_IN": "Войти в систему",
+		"FORGOT_PASSWORD": "Забыли пароль?",
+		"OR_SIGN_IN": "или выполните вход с помощью",
+		"USE_ENTERPRISE_ACCOUNT": "Использовать мою корпоративную учетную запись (единый вход)",
+		"POPUP": {
+			"REMIND_PASSWORD_IN_EMAIL": "Вам отправлено электронное сообщение со ссылкой для восстановления пароля."
+		},
+		"ERROR": {
+			"INVALID_CREDENTIALS": "Неправильное имя пользователя или пароль.",
+			"VALIDATION_FAILED": "Имя пользователя и пароль не могут быть пустыми.",
+			"NOT_ALLOWED": "Нет разрешения на вход в систему.",
+			"USER_AUTH_DISABLED": "Для пользователя {{name}} отключена аутентификация",
+			"ERROR": "Сервер не отвечает, или на сервере произошла ошибка. Повторите попытку.",
+			"ERC_AUTH_USER_NAME": "Не удалось выполнить аутентификацию OAuth. Обратитесь за помощью к системному администратору.",
+			"ERC_AUTH_EMPTY_EMAIL": "Пользователь с неопределенным адресом электронной почты не может войти в систему"
+		}
+	},
+	"HEADER": {
+		"ABOUT": "О системе",
+		"SIGN_OUT": "Выход",
+		"SETTINGS": "Настройки",
+		"SIGN_IN": "Вход"
+	},
+	"BROWSERS": {
+		"BROWSER_NOT_SUPPORTED": "не может использоваться для присоединения к собранию. Воспользуйтесь одним из поддерживаемых браузеров.",
+		"YOUR": "Ваш",
+		"BROWSER": "браузер",
+		"BROWSERS": "браузеры",
+		"BROWSER_OUT_OF_DATE": "Устарел. Для оптимальной работы обновите браузер.",
+		"VERSION_EXCLUSION_FOR_WEBRTC": "Версия вашего браузера не поддерживает аудио/видео. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
+		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Ваша версия браузера не поддерживает веб-конференции. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
+		"OLD_EDGE": "Ваш браузер несовместим с Avaya Meetings. Для оптимальной работы переключитесь на Google Chrome или последнюю версию Microsoft Edge."
+	},
+	"NAVIGATION": {
+		"JOIN": "Начать собрание сейчас",
+		"RECORDING": "Записи и события",
+		"SCHEDULE": "Расписание",
+		"SETTINGS": "Настройки",
+		"SIGN_OUT": "Выход"
+	},
 	"SETTINGS": {
 		"TITLE": "Настройки Avaya",
 		"SETTINGS": "Настройки",
@@ -192,62 +255,6 @@
 	"ON": "Вкл.",
 	"OFF": "Выкл.",
 	"DISABLED": "Отключено",
-	"ABOUT": {
-		"TITLE": "О системе Avaya Meetings",
-		"RELEASE": "Версия:",
-		"AVAYA_TRADEMARKS": "Avaya Meetings и Equinox Conferencing — товарные знаки Avaya Inc.",
-		"OTHER_TRADEMARKS": "Java — товарный знак Sun Microsystems, Inc.; Microsoft, Windows и Internet Explorer — товарные знаки или зарегистрированные товарные знаки Microsoft Corporation на территории США и/или других стран.",
-		"TRADEMARKS_INFO": "Названия всех прочих продуктов, используемые в настоящем документе, являются товарными знаками или зарегистрированными товарными знаками соответствующих производителей.",
-		"COPYRIGHT_INFO": "Дополнительная информация об идентификации владельцев авторских прав на компоненты от третьих сторон и условий, которые применяются к данному продукту, доступна <a href=\"{{link}}\" target=\"_blank\">{{здесь}}</a>.",
-		"LICENCE": "Загружая программное обеспечение, устанавливая или используя его вы подтверждаете, что прочитали, поняли и приняли условия лицензионного соглашения на использование программного обеспечения Avaya Software License Terms (Avaya Products): ",
-		"LICENCE_I18N": "Английская, бразильская, французская (Канада), китайская, немецкая, итальянская, португальская, испанская, французская, японская и русская версии расположены на: ",
-		"USAGE_INFO": "Если у вас нет прямого доступа к Интернету, воспользуйтесь устройством с доступом к Интернету, чтобы просмотреть, загрузить и распечатать соответствующую лицензию.",
-		"COPYRIGHT": "© Avaya Inc., {{year}} г. Все права защищены.",
-		"CLOSE": "Закрыть",
-		"LINK": "ссылка"
-	},
-	"LOGIN": {
-		"SIGNING": "Выполняется вход...",
-		"LOADING": "Загрузка...",
-		"GREETING": "У вас уже есть учетная запись?",
-		"NAME": "имя пользователя",
-		"LOGIN": "вход",
-		"PASSWORD": "пароль",
-		"REMEMBER_ME": "Оставаться в системе",
-		"SIGN_IN": "Вход",
-		"LOG_IN": "Войти в систему",
-		"FORGOT_PASSWORD": "Забыли пароль?",
-		"OR_SIGN_IN": "или выполните вход с помощью",
-		"USE_ENTERPRISE_ACCOUNT": "Использовать мою корпоративную учетную запись (единый вход)",
-		"POPUP": {
-			"REMIND_PASSWORD_IN_EMAIL": "Вам отправлено электронное сообщение со ссылкой для восстановления пароля."
-		},
-		"ERROR": {
-			"INVALID_CREDENTIALS": "Неправильное имя пользователя или пароль.",
-			"VALIDATION_FAILED": "Имя пользователя и пароль не могут быть пустыми.",
-			"NOT_ALLOWED": "Нет разрешения на вход в систему.",
-			"USER_AUTH_DISABLED": "Для пользователя {{name}} отключена аутентификация",
-			"ERROR": "Сервер не отвечает, или на сервере произошла ошибка. Повторите попытку.",
-			"ERC_AUTH_USER_NAME": "Не удалось выполнить аутентификацию OAuth. Обратитесь за помощью к системному администратору.",
-			"ERC_AUTH_EMPTY_EMAIL": "Пользователь с неопределенным адресом электронной почты не может войти в систему"
-		}
-	},
-	"HEADER": {
-		"ABOUT": "О системе",
-		"SIGN_OUT": "Выход",
-		"SETTINGS": "Настройки",
-		"SIGN_IN": "Вход"
-	},
-	"BROWSERS": {
-		"BROWSER_NOT_SUPPORTED": "не может использоваться для присоединения к собранию. Воспользуйтесь одним из поддерживаемых браузеров.",
-		"YOUR": "Ваш",
-		"BROWSER": "браузер",
-		"BROWSERS": "браузеры",
-		"BROWSER_OUT_OF_DATE": "Устарел. Для оптимальной работы обновите браузер.",
-		"VERSION_EXCLUSION_FOR_WEBRTC": "Версия вашего браузера не поддерживает аудио/видео. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
-		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Ваша версия браузера не поддерживает веб-конференции. Для оптимальной совместной работы<br>попробуйте другую версию, другой <span class=\"underline\">поддерживаемый браузер</span>, или загрузите клиент.",
-		"OLD_EDGE": "Ваш браузер несовместим с Avaya Meetings. Для оптимальной работы переключитесь на Google Chrome или последнюю версию Microsoft Edge."
-	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "Срок действия вашего сеанса истек. Войдите в систему, чтобы продолжить.",
