--- a/src/assets/i18n/es-XL.json
+++ b/src/assets/i18n/es-XL.json
@@ -1,4 +1,67 @@
 {
+	"ABOUT": {
+		"TITLE": "Acerca de Avaya Meetings",
+		"RELEASE": "Versión:",
+		"AVAYA_TRADEMARKS": "Avaya Meetings y Equinox Conferencing son marcas comerciales de Avaya Inc.",
+		"OTHER_TRADEMARKS": "Java es una marca comercial de Sun Microsystems, Inc.; Microsoft, Windows e Internet Explorer son marcas registradas o marcas comerciales de Microsoft Corporation en los Estados Unidos y/o en otros países.",
+		"TRADEMARKS_INFO": "Todos los demás nombres de productos utilizados en este documento son marcas comerciales o marcas registradas de sus respectivos fabricantes.",
+		"COPYRIGHT_INFO": "Para más información acerca de la identificación de los propietarios de los derechos de copia de los componentes de terceros, así como los términos relacionados con este producto, consulte este <a href=\"{{link}}\" target=\"_blank\">{{link}}</a>.",
+		"LICENCE": "Al descargar, instalar o usar el software usted indica que ha leído, comprendido y aceptado los Términos de licencia de software de Avaya (Productos de Avaya) contenidos en ",
+		"LICENCE_I18N": "Las versiones en inglés, portugués brasileño, francés canadiense, chino, alemán, italiano, portugués europeo, español, francés, japonés y ruso están publicadas en ",
+		"USAGE_INFO": "Si no tiene acceso directo a Internet, use un dispositivo que tenga acceso a Internet para visualizar, descargar e imprimir la licencia aplicable.",
+		"COPYRIGHT": "Copyright © {{year}} Avaya Inc. Todos los derechos reservados.",
+		"CLOSE": "Cerrar",
+		"LINK": "Enlace"
+	},
+	"LOGIN": {
+		"SIGNING": "Iniciando sesión...",
+		"LOADING": "Cargando...",
+		"GREETING": "¿Tiene una cuenta?",
+		"NAME": "Nombre de usuario",
+		"LOGIN": "inicio de sesión",
+		"PASSWORD": "Contraseña",
+		"REMEMBER_ME": "No cerrar sesión",
+		"SIGN_IN": "Iniciar sesión",
+		"LOG_IN": "Iniciar sesión",
+		"FORGOT_PASSWORD": "¿Olvidó su contraseña?",
+		"OR_SIGN_IN": "o inicie sesión con",
+		"USE_ENTERPRISE_ACCOUNT": "Usar mi cuenta empresarial (SSO)",
+		"POPUP": {
+			"REMIND_PASSWORD_IN_EMAIL": "Se le envió un correo electrónico con un vínculo para recuperar la contraseña."
+		},
+		"ERROR": {
+			"INVALID_CREDENTIALS": "Nombre de usuario o contraseña no válidos",
+			"VALIDATION_FAILED": "El nombre de usuario o contraseña no pueden estar vacíos.",
+			"NOT_ALLOWED": "No tiene autorización para iniciar sesión.",
+			"USER_AUTH_DISABLED": "Autenticación deshabilitada para el usuario {{name}}",
+			"ERROR": "No hay respuesta del servidor o se produjo un error en el servidor. Vuelva a intentarlo más tarde.",
+			"ERC_AUTH_USER_NAME": "La autenticación OAuth no se realizó correctamente. Comuníquese con el administrador del sistema para solicitar ayuda.",
+			"ERC_AUTH_EMPTY_EMAIL": "El usuario no puede iniciar sesión con un correo electrónico no definido"
+		}
+	},
+	"HEADER": {
+		"ABOUT": "Acerca de",
+		"SIGN_OUT": "Cerrar sesión",
+		"SETTINGS": "Configuración",
+		"SIGN_IN": "Iniciar sesión"
+	},
+	"BROWSERS": {
+		"BROWSER_NOT_SUPPORTED": "no puede usarse para unirse a la reunión. Inténtelo con uno de los navegadores compatibles.",
+		"YOUR": "Su",
+		"BROWSER": "navegador",
+		"BROWSERS": "navegadores",
+		"BROWSER_OUT_OF_DATE": "está obsoleto. Actualice su navegador para conseguir una experiencia mejorada.",
+		"VERSION_EXCLUSION_FOR_WEBRTC": "Esta versión de navegador no admite audio/video. Para lograr una mejor experiencia de colaboración,<br>pruebe con otra versión, otros <span class=\"underline\">navegadores compatibles</span> o descargue el cliente.",
+		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Esta versión de navegador no es compatible con las conferencias web. Para lograr una mejor experiencia de colaboración,<br>pruebe con otra versión, otros <span class=\"underline\">navegadores compatibles</span> o descargue el cliente.",
+		"OLD_EDGE": "Su navegador no es compatible con Avaya Meetings. Cambie a Google Chrome o al último Microsoft Edge para obtener la mejor experiencia."
+	},
+	"NAVIGATION": {
+		"JOIN": "Reunirse ahora",
+		"RECORDING": "Grabaciones + Eventos",
+		"SCHEDULE": "Agenda",
+		"SETTINGS": "Configuración",
+		"SIGN_OUT": "Cerrar sesión"
+	},
 	"SETTINGS": {
 		"TITLE": "Configuración de Avaya",
 		"SETTINGS": "Ajustes",
@@ -192,62 +255,6 @@
 	"ON": "Activado",
 	"OFF": "Desactivado",
 	"DISABLED": "Deshabilitada",
-	"ABOUT": {
-		"TITLE": "Acerca de Avaya Meetings",
-		"RELEASE": "Versión:",
-		"AVAYA_TRADEMARKS": "Avaya Meetings y Equinox Conferencing son marcas comerciales de Avaya Inc.",
-		"OTHER_TRADEMARKS": "Java es una marca comercial de Sun Microsystems, Inc.; Microsoft, Windows e Internet Explorer son marcas registradas o marcas comerciales de Microsoft Corporation en los Estados Unidos y/o en otros países.",
-		"TRADEMARKS_INFO": "Todos los demás nombres de productos utilizados en este documento son marcas comerciales o marcas registradas de sus respectivos fabricantes.",
-		"COPYRIGHT_INFO": "Para más información acerca de la identificación de los propietarios de los derechos de copia de los componentes de terceros, así como los términos relacionados con este producto, consulte este <a href=\"{{link}}\" target=\"_blank\">{{link}}</a>.",
-		"LICENCE": "Al descargar, instalar o usar el software usted indica que ha leído, comprendido y aceptado los Términos de licencia de software de Avaya (Productos de Avaya) contenidos en ",
-		"LICENCE_I18N": "Las versiones en inglés, portugués brasileño, francés canadiense, chino, alemán, italiano, portugués europeo, español, francés, japonés y ruso están publicadas en ",
-		"USAGE_INFO": "Si no tiene acceso directo a Internet, use un dispositivo que tenga acceso a Internet para visualizar, descargar e imprimir la licencia aplicable.",
-		"COPYRIGHT": "Copyright © {{year}} Avaya Inc. Todos los derechos reservados.",
-		"CLOSE": "Cerrar",
-		"LINK": "Enlace"
-	},
-	"LOGIN": {
-		"SIGNING": "Iniciando sesión...",
-		"LOADING": "Cargando...",
-		"GREETING": "¿Tiene una cuenta?",
-		"NAME": "Nombre de usuario",
-		"LOGIN": "inicio de sesión",
-		"PASSWORD": "Contraseña",
-		"REMEMBER_ME": "No cerrar sesión",
-		"SIGN_IN": "Iniciar sesión",
-		"LOG_IN": "Iniciar sesión",
-		"FORGOT_PASSWORD": "¿Olvidó su contraseña?",
-		"OR_SIGN_IN": "o inicie sesión con",
-		"USE_ENTERPRISE_ACCOUNT": "Usar mi cuenta empresarial (SSO)",
-		"POPUP": {
-			"REMIND_PASSWORD_IN_EMAIL": "Se le envió un correo electrónico con un vínculo para recuperar la contraseña."
-		},
-		"ERROR": {
-			"INVALID_CREDENTIALS": "Nombre de usuario o contraseña no válidos",
-			"VALIDATION_FAILED": "El nombre de usuario o contraseña no pueden estar vacíos.",
-			"NOT_ALLOWED": "No tiene autorización para iniciar sesión.",
-			"USER_AUTH_DISABLED": "Autenticación deshabilitada para el usuario {{name}}",
-			"ERROR": "No hay respuesta del servidor o se produjo un error en el servidor. Vuelva a intentarlo más tarde.",
-			"ERC_AUTH_USER_NAME": "La autenticación OAuth no se realizó correctamente. Comuníquese con el administrador del sistema para solicitar ayuda.",
-			"ERC_AUTH_EMPTY_EMAIL": "El usuario no puede iniciar sesión con un correo electrónico no definido"
-		}
-	},
-	"HEADER": {
-		"ABOUT": "Acerca de",
-		"SIGN_OUT": "Cerrar sesión",
-		"SETTINGS": "Configuración",
-		"SIGN_IN": "Iniciar sesión"
-	},
-	"BROWSERS": {
-		"BROWSER_NOT_SUPPORTED": "no puede usarse para unirse a la reunión. Inténtelo con uno de los navegadores compatibles.",
-		"YOUR": "Su",
-		"BROWSER": "navegador",
-		"BROWSERS": "navegadores",
-		"BROWSER_OUT_OF_DATE": "está obsoleto. Actualice su navegador para conseguir una experiencia mejorada.",
-		"VERSION_EXCLUSION_FOR_WEBRTC": "Esta versión de navegador no admite audio/video. Para lograr una mejor experiencia de colaboración,<br>pruebe con otra versión, otros <span class=\"underline\">navegadores compatibles</span> o descargue el cliente.",
-		"VERSION_EXCLUSION_FOR_DATE_ONLY": "Esta versión de navegador no es compatible con las conferencias web. Para lograr una mejor experiencia de colaboración,<br>pruebe con otra versión, otros <span class=\"underline\">navegadores compatibles</span> o descargue el cliente.",
-		"OLD_EDGE": "Su navegador no es compatible con Avaya Meetings. Cambie a Google Chrome o al último Microsoft Edge para obtener la mejor experiencia."
-	},
 	"GENERAL": {
 		"ERROR": {
 			"SESSION_HAS_EXPIRED": "Su sesión ha finalizado. Vuelva a iniciar sesión para continuar.",
